<resources>
    <string name="app_name">HangTight</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_new_workout">CreateNewWorkout</string>
    <string name="title_activity_new_basic_workout">NewBasicWorkout</string>
    <string name="title_activity_workout">Workout</string>
    <string name="title_activity_load_saved_workouts">LoadSavedWorkouts</string>
    <string name="title_activity_edit_saved_workout">EditSavedWorkout</string>
    <string name="title_activity_settings_page">settingsPage</string>
    <string name="title_activity_help_page">helpPage</string>

    <!-- ActivityWorkout -->
    <string name="timer_prepare">Prepare</string>
    <string name="timer_hang">Hang</string>
    <string name="timer_rest">Rest</string>
    <string name="timer_recover">Recover</string>


    <string name="intro_help_page">\nThis help page provides an overview of how to use the HangTight app.
        The functionality of the app, including creating and saving workouts, is explained in this page.
        \nHangboards are only recommended for advanced climbers and should never be used without thoroughly
        warming up first.</string>
    <string name="workout_structure_help_page">The workout is structured using hang, rest, reps, sets and recover values.
        \n\n1)A rep consists of a hang followed by a rest.
        \n\n2)This is repeated until the chosen number of reps is reached.
        \n\n3)The recover timer will start - this is a complete set.
        \n\n4)The sets are repeated until the chosen number of sets is reached.</string>
    <string name="create_workout_help">To create a workout click on the \'create new workout\' button on the home page.
        A page will load where you can input values for hang, rest, reps, sets and recover. Once you have selected the values
        wanted either press \'start workout\' to begin the workout or \'Save Workout\' to save the workout.</string>
    <string name="saveAndLoad_help_page">To load a workout click \'Load Saved Workout\' on the home screen.
        A list of saved workouts will appear. Tap on a saved workout to start it. Press and hold on a saved workout
        to edit or delete it.
        \n\nTo save a workout for future use simply create the workout by pressing \'Create New Workout\' on the home screen
        and then pressing the \'Save Workout\' button. At this point a title and description will need to be entered.
        A message will appear at the bottom of the screen if the save was successful.
    </string>
    <string name="change_settings_help_page">
        The settings page can be accessed by clicking the settings icon at the top right of the home screen.\n
        There are then options to change the default for sound and vibrate to be On/Off, change the default for showing the warning about
        warming up properly before beginning any workout. Finally, there is a slider for the \'Pre-Workout Countdown\'.
        This is set to 5 seconds by default but can be altered to allow more or less time to get ready after starting the workout.
        </string>

    <string name="invalid_numbers">Unable to create Workout. Please ensure you have entered valid values.</string>
    <string name="yes">Yes</string>

    <!-- AdMob values are generated from build.gradle -->

    <!-- Dialog text -->
    <string name="cancel">Cancel</string>
    <string name="dialog_warm_up_title">Have You Warmed Up?</string>
    <string name="dialog_warm_up_message">Ensure you are thoroughly warmed up before beginning
        any workout. Failure to do so could result in injury.\n\n
        If you feel any pain during the workout, stop immediately.
    </string>
    <string name="dialog_warm_up_start_workout">Start Workout</string>
    <string name="save_workout">Save Workout</string>
    <string name="start_workout">Start Workout</string>
    <string name="workout_creator">Workout Creator</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="warm_up_warning">Warm Up Warning</string>
    <string name="countdown">Countdown</string>
    <string name="save_settings">Save Settings</string>
    <string name="workout_saved">Workout saved!</string>
    <string name="good_job">Good job</string>
    <string name="workout_complete">Workout Complete!</string>
    <string name="upgrade_to_advert_free">Upgrade to advert free</string>
    <string name="go_home">Go Home</string>
    <string name="mute_unmute">Mute / Unmute</string>
    <string name="pause_resume">pause / resume</string>
    <string name="skip_forward">skip forward</string>
    <string name="rewind">rewind</string>
    <string name="remaining">REMAINING:</string>
    <string name="total">TOTAL:</string>
    <string name="set_label">SET:</string>
    <string name="rep_label">REP:</string>
    <string name="how_to_use_hangtight">How to Use HangTight</string>
    <string name="workout_structure">\nWorkout Structure</string>
    <string name="creating_a_workout">\nCreating a Workout</string>
    <string name="saving_and_loading_workouts">\nSaving and Loading Workouts</string>
    <string name="changing_settings">\nChanging Settings</string>
    <string name="background_female_desc">Background showing female climber reaching for a hold</string>
    <string name="background_male_desc">Background showing male climber reaching for a hold</string>
    <string name="create_new_workout">Create New Workout</string>
    <string name="load_saved_workout">Load Saved Workout</string>
    <string name="saved_workouts">Saved Workouts</string>
    <string name="do_not_show_this_warning_again">Do not show this warning again</string>
    <string name="close_advert_and_upgrade_to_advert_free">Close Advert and upgrade to advert free</string>
    <string name="negative">-</string>
    <string name="positive">+</string>
    <string name="expand_workout">Expand workout</string>
    <string name="delete_workout">Delete workout</string>
    <string name="delete">Delete</string>
    <string name="edit_workout">Edit workout</string>
    <string name="edit">Edit</string>
    <string name="start">Start</string>
    <string name="help">Help</string>
    <string name="save_new">Save New</string>
    <string name="overwrite_existing">Overwrite Existing</string>
    <string name="workout_save_failed">The workout failed to save, please try again</string>
    <string name="description_label">Description:</string>
    <string name="workout_name_label">Workout Name:</string>
    <string name="billing_error">Error Code %1$d. Check your internet connection. If this continues, check you are logged into google play and \"Google Play Services\" is up to date</string>

    <!-- Sound options -->
    <string-array name="spinner_sound_options">
        <item>None</item>
        <item>Beep</item>
        <item>Blooper</item>
        <item>Censor</item>
        <item>Ding</item>
        <item>Ring</item>
    </string-array>
</resources>
