<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.softwareoverflow.hangtight.ActivityWorkoutComplete">

    <TextView
        android:textSize="40sp"
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textColor="@color/Green"
        android:text="@string/workout_complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="30sp"
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView9" />

    <Button
        android:onClick="saveWorkout"
        android:layout_margin="8dp"
        android:id="@+id/workoutComplete_button_saveWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_workout"
        app:layout_constraintBottom_toTopOf="@+id/workoutComplete_button_upgrade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:layout_margin="8dp"
        android:onClick="upgradeToPro"
        android:id="@+id/workoutComplete_button_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_to_advert_free"
        app:layout_constraintBottom_toTopOf="@+id/workoutComplete_button_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutComplete_button_saveWorkout" />

    <Button
        android:id="@+id/workoutComplete_button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="goHome"
        android:text="@string/go_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutComplete_button_upgrade" />

</androidx.constraintlayout.widget.ConstraintLayout>
