<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/pickerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/timer_recover"
        android:textColor="@color/NavajoWhite"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/negative"
        android:textColor="@color/NavajoWhite"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_numberPicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:maxEms="3"
        android:textColor="@color/NavajoWhite"
        android:textIsSelectable="true"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/positive"
        android:textColor="@color/NavajoWhite"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>