<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="com.softwareoverflow.hangtight.ActivityWorkoutCreator">

    <com.softwareoverflow.hangtight.ui.CustomBannerAd xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/admob_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adUnitId_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admob_layout">

        <TextView
            android:id="@+id/textView18"
            style="@style/screenTitles"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:isScrollContainer="true"
            android:text="@string/workout_creator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/white"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/root_new_basic_workout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:isScrollContainer="true"
                app:layout_constraintVertical_weight="1">

                <com.softwareoverflow.hangtight.ui.NumberPickerPlusMinus
                    android:id="@+id/hangTimeNumberPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/restTimeNumberPicker"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread"
                    app:np_defaultValue="5"
                    app:np_name="Hang" />

                <com.softwareoverflow.hangtight.ui.NumberPickerPlusMinus
                    android:id="@+id/restTimeNumberPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/repsNumberPicker"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hangTimeNumberPicker"
                    app:np_defaultValue="5"
                    app:np_name="Rest" />

                <com.softwareoverflow.hangtight.ui.NumberPickerPlusMinus
                    android:id="@+id/repsNumberPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/setsNumberPicker"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restTimeNumberPicker"
                    app:np_defaultValue="6"
                    app:np_name="Reps" />

                <com.softwareoverflow.hangtight.ui.NumberPickerPlusMinus
                    android:id="@+id/setsNumberPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/recoverTimeNumberPicker"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/repsNumberPicker"
                    app:np_defaultValue="6"
                    app:np_name="Sets" />

                <com.softwareoverflow.hangtight.ui.NumberPickerPlusMinus
                    android:id="@+id/recoverTimeNumberPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/save_workout_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setsNumberPicker"
                    app:np_defaultValue="120"
                    app:np_name="Recover" />

                <Button
                    android:id="@+id/startWorkoutButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:isScrollContainer="true"
                    android:onClick="startWorkout"
                    android:text="@string/start_workout"
                    app:layout_constraintBottom_toBottomOf="@+id/save_workout_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/save_workout_button"
                    app:layout_constraintTop_toTopOf="@+id/save_workout_button"
                    app:layout_constraintVertical_bias="1" />

                <Button
                    android:id="@+id/save_workout_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:isScrollContainer="true"
                    android:onClick="saveWorkout"
                    android:text="@string/save_workout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/startWorkoutButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>